--- a/babel.cfg
+++ b/babel.cfg
@@ -3,4 +3,4 @@
 [ignore: NewFrontend/node_modules/**]
 [ignore: VueFrontend/node_modules/**]
 [python: **.py]
-[jinja2: **/templates/**.html]
+# [jinja2: **/templates/**.html]
